--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script src="js/main_festorazzi.js"></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -43,6 +44,8 @@
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
             </div>
+            <button id="botonActivar">Botón Activar</button>
+            <button id="botonDesactivar">Desactivar</button>
         </header>
         <!-- Services-->
         <section class="page-section" id="services">
